[project]
name = "loadprobe"
version = "0.1.0"
description = "Locust-based performance load testing automation with SLA judgment"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.13",
    "uvicorn[standard]>=0.34.2",
    "pydantic>=2.11.3",
]

[dependency-groups]
locust = [
    "locust>=2.37.0",
]
monitor = [
    "psutil>=7.0.0",
]
report = [
    "jinja2>=3.1.0",
    "pandas>=2.2.0",
]
dev = [
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.1.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
